<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bookie</string>
    <string name="generic_dialog_positive_button">OK</string>
    <string name="generic_dialog_cancel_button">Cancel</string>
    <string name="title_all">All</string>
    <string name="title_mine">Mine</string>
    <string name="button_settings_text">Settings</string>
    <string name="field_new_bookmark_url_hint">URL</string>
    <string name="field_new_bookmark_title_hint">Title</string>
    <string name="button_new_bookmark_cancel_text">@string/generic_dialog_cancel_button</string>
    <string name="button_new_bookmark_save_text">@string/generic_dialog_positive_button</string>
    <string name="button_new_bookmark_new_tag_text">Add Tag</string>
    <string name="button_new_bookmark_new_tag_dialog_title">Add Tag</string>
    <string name="button_new_bookmark_new_tag_dialog_text">Enter tag</string>
    <string name="button_new_bookmark_new_tag_dialog_text_badchar">Enter tag (space replaced with -)</string>
    <string name="button_new_bookmark_new_tag_dialog_ok_button_text">OK</string>
    <string name="button_new_bookmark_new_tag_dialog_cancel_button_text">Cancel</string>
    <string name="settings_username_dialog_title">Username</string>
    <string name="settings_username_dialog_message">"Enter your existing account`s username"</string>
    <string name="settings_apikey_dialog_title">API Key</string>
    <string name="settings_apikey_dialog_message">Enter the API for your existing account</string>
    <string name="settings_baseurl_dialog_title">Server</string>
    <string name="settings_baseurl_dialog_message">Enter the URL of the Bookie server (eg https://bmark.us)</string>
    <string name="settings_parseurl_dialog_title" >Parse Server</string>
    <string name="settings_parseurl_dialog_message">Enter the URL of the Parse server (eg http://r.bmark.us)</string>
    <string name="settings_baseurl_defaultvalue">https://bmark.us</string>
    <string name="settings_parseurl_defaultvalue">http://r.bmark.us</string>
    <string name="bookmark_detail_menu_title">Bookmark Detail Menu</string>
    <string name="bookmark_detail_activity_title">Bookie Bookmark Detail</string>
    <string name="bookmark_detail_activity_description_label">Description</string>
    <string name="bookmark_detail_activity_url_label">URL</string>
    <string name="bookmark_detail_activity_username_label">User</string>
    <string name="bookmark_detail_activity_stored_label">Added</string>
    <string name="bookmark_detail_activity_total_count_label">Total Clicks</string>
    <string name="bookmark_detail_activity_count_label">My Clicks</string>
    <string name="bookmark_detail_activity_tags_label">Tags</string>
    <string name="title_search">search</string>
    <string name="search_dialog_title">Search</string>
    <string name="search_dialog_message">Enter search terms</string>
    <string name="search_dialog_positive_button">@string/generic_dialog_positive_button</string>
    <string name="search_dialog_cancel_button">@string/generic_dialog_cancel_button</string>
    <string name="error_network_message">error communicating with server at %s</string>
    <string name="error_server_format">error talking to %1$s : %2$s</string>
    <string name="error_unconnected_message">no data connection available</string>
    <string name="error_unknown_error">unknown error</string>
    <string name="new_bookmark_save_success">Saved OK</string>
    <string name="new_bookmark_save_failed">Error saving bookmark</string>
    <string name="field_new_bookmark_tags_hint">Tags</string>
    <string name="error_access_denied">access denied</string>
    <string name="message_user_not_logged_in">Please enter your username and API key in the Settings</string>
    <string name="title_refresh">refresh</string>

</resources>