<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="User Info"
        android:key="user_info">

        <EditTextPreference
            android:key="username"
            android:title="User name" 
            android:summary="Your Login Name for this Server"
            android:dialogTitle="@string/settings_username_dialog_title"
            android:dialogMessage="@string/settings_username_dialog_message"
             />

        <EditTextPreference
            android:key="apikey"
            android:title="API Key" 
            android:summary="Your API key for this server"
            android:dialogTitle="@string/settings_apikey_dialog_title"
            android:dialogMessage="@string/settings_apikey_dialog_message"    
           	 />

    </PreferenceCategory>
	<PreferenceCategory 
        android:title="Server Info"
        android:key="server_info">

        <EditTextPreference
            android:key="base_url"
            android:title="Server URL" 
            android:summary="Base URL for the Bookie server"
            android:dialogTitle="@string/settings_baseurl_dialog_title"
            android:dialogMessage="@string/settings_baseurl_dialog_message"
            android:defaultValue="@string/settings_baseurl_defaultvalue"/>

    </PreferenceCategory>

</PreferenceScreen>