<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newBookmarkTitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/field_new_bookmark_title_hint"
            android:layout_centerInParent="true"
            >

            <requestFocus />
        </EditText>

        <ProgressBar
            android:id="@+id/newBookmarkTitleProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>

    <EditText
        android:id="@+id/newBookmarkUrlField"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/field_new_bookmark_url_hint"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/newBookmarkTagsField"
            android:hint="@string/field_new_bookmark_tags_hint"
            android:inputType="textMultiLine"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:baselineAligned="true"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/newBookmarkCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_new_bookmark_cancel_text" />

        <Button
            android:id="@+id/newBookmarkSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_new_bookmark_save_text" />

    </LinearLayout>

</LinearLayout>